# gemini-audio

./: .gitignore  Cargo.toml  Makefile  README.md  ROADMAP.md
.github/workflows/: android.yml  release.yml
android/: settings.gradle.kts
android/app/: build.gradle.kts
android/app/scripts/: generate-bindings.sh
android/app/src/main/: AndroidManifest.xml
android/app/src/main/assets/prompts/: default.md
android/app/src/main/java/audio/gemini/app/: MainActivity.kt
android/app/src/main/java/audio/gemini/app/audio/: OboeAudioCapture.kt  OboeAudioPlayback.kt
android/app/src/main/java/audio/gemini/app/data/: ConversationRepository.kt  PromptRepository.kt  SessionCallbackImpl.kt  SettingsRepository.kt
android/app/src/main/java/audio/gemini/app/data/models/: Prompt.kt
android/app/src/main/java/audio/gemini/app/ui/: GeminiAudioApp.kt
android/app/src/main/java/audio/gemini/app/ui/activeconversation/: ActiveConversationScreen.kt  ActiveConversationViewModel.kt
android/app/src/main/java/audio/gemini/app/ui/conversations/: ConversationsScreen.kt  ConversationsViewModel.kt
android/app/src/main/java/audio/gemini/app/ui/newconversation/: NewConversationScreen.kt  NewConversationViewModel.kt
android/app/src/main/java/audio/gemini/app/ui/prompts/: PromptEditorScreen.kt  PromptListScreen.kt  PromptViewModel.kt
android/app/src/main/java/audio/gemini/app/ui/settings/: SettingsScreen.kt  SettingsViewModel.kt
android/app/src/main/java/uniffi/gemini_audio_core/: gemini_audio_core.kt
android/app/src/main/res/values/: strings.xml  themes.xml
app/: Cargo.toml
app/src/: main.rs  platform_audio.rs  tui.rs
core/: Cargo.toml
core/src/: audio.rs  client.rs  config.rs  database.rs  ffi.rs  lib.rs  prompts.rs  retry.rs
docs/: GEMINI_LIVE_API_SPEC.md
src/: audio.rs  capabilities.rs  client.rs  error.rs  lib.rs  list_devices.rs  logging.rs  main.rs  prompts.rs  tui.rs
tests/: test_pulse.rs  test_pulse2.rs  test_ws.py  test_ws3.py
tools/: Cargo.toml  dump_json.py
