[package]
name = "gemini-audio"
version = "0.1.0"
edition = "2021"
description = "Real-time voice conversation with Gemini 2.5 Flash Native Audio"
license = "MIT"
repository = "https://github.com/daryltucker/gemini-audio"
keywords = ["gemini", "audio", "voice", "ai", "tui"]
categories = ["multimedia::audio", "command-line-utilities"]

[package.metadata.binstall]
pkg-url = "{ repo }/releases/download/v{ version }/{ name }-{ target }.tar.gz"
pkg-fmt = "tgz"
bin-dir = "{ bin }{ binary-ext }"

[dependencies]
tokio-tungstenite = { version = "0.22", features = ["native-tls"] }
tokio = { version = "1.0", features = ["full"] }
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
hound = "3.5"
base64 = "0.21"
anyhow = "1.0"
clap = { version = "4.0", features = ["derive"] }
directories-next = "2.0"
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "sqlite", "chrono"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "json", "env-filter"] }
tracing-appender = "0.2"
futures-util = "0.3"
tokio-util = { version = "0.7", features = ["codec"] }
bytes = "1.0"
reqwest = { version = "0.11", features = ["json", "stream"] }
symphonia = { version = "0.5", features = ["all"] }
rubato = "0.14"
regex = "1.0"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.0", features = ["v4"] }
dotenv = "0.15"
async-trait = "0.1"
thiserror = "1.0"
ratatui = "0.30.0"
crossterm = { version = "0.29.0", features = ["event-stream"] }
arboard = "3"
libpulse-binding = "2.30.1"
libpulse-simple-binding = "2.29.0"

[dev-dependencies]
tempfile = "3.0"
